--- a/h5tk_components/h5tk-elements.html
+++ b/h5tk_components/h5tk-elements.html
@@ -1,2 +1,3 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../bower_components/firebase-element/firebase-element.html">
+<link rel="import" href="h5tk-app/h5tk-app.html">
