added paul versions with local json data test

--- a/h5tk_components/h5tk-elements-paul.html
+++ b/h5tk_components/h5tk-elements-paul.html
@@ -1,4 +1,3 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/firebase-element/firebase-element.html">
-<link rel="import" href="../bower_components/firebase-element/firebase.html">
-<link rel="import" href="h5tk-app/h5tk-app.html">
+<link rel="import" href="h5tk-app/h5tk-app-paul.html">
