--- a/h5tk_components/h5tk-app/h5tk-app-paul.html
+++ b/h5tk_components/h5tk-app/h5tk-app-paul.html
@@ -14,6 +14,13 @@
         <template is="x-repeat" items="{{data.toolkit-items}}">
           <h1>{{item.title}}</h1>
           <p>{{item.summary}}</p>
+          <template is="x-repeat" items="{{item.demo}}">
+            <h2>{{item.title}}</h2>
+            <p>{{item.description}}</p>
+            <a href="{{item.link.url}}">{{item.link.title}}</a>
+          </template>
+
+
         </template>
       </template>
     </dom-module>
@@ -43,10 +50,10 @@
                 "demo" : [ {
                   "description" : "Here's a demo that shows how to use fonts.",
                   "link" : {
-                    "title" : "Some Text",
+                    "title" : "Moar Fonts",
                     "url" : "http://google.com"
                   },
-                  "title" : "Demo"
+                  "title" : "Demo Font"
                 } ],
                 "quick start" : {
                   "code snippet" : "<html>   <head>     <link rel=\"stylesheet\" type=\"text/css\" href=\"http://fonts.googleapis.com/css?family=Tangerine\">     <style>       body {         font-family: 'Tangerine', serif;         font-size: 48px;       }     </style>   </head>   <body>     <div>Making the Web Beautiful!</div>   </body> </html>",
@@ -63,10 +70,10 @@
                 "demo" : [ {
                   "description" : "Here's a demo that shows how to use Images.",
                   "link" : {
-                    "title" : "Some Text",
+                    "title" : "Moar Images",
                     "url" : "http://google.com"
                   },
-                  "title" : "Demo"
+                  "title" : "Demo Images"
                 } ],
                 "quick start" : {
                   "code snippet" : "<html>   <head>     <link rel=\"stylesheet\" type=\"text/css\" href=\"http://fonts.googleapis.com/css?family=Tangerine\">     <style>       body {         font-family: 'Tangerine', serif;         font-size: 48px;       }     </style>   </head>   <body>     <div>Making the Web Beautiful!</div>   </body> </html>",
