stuck at key's with spaces, not sure how to get those working

--- a/h5tk_components/h5tk-app/h5tk-app-paul.html
+++ b/h5tk_components/h5tk-app/h5tk-app-paul.html
@@ -20,7 +20,9 @@
             <a href="{{item.link.url}}">{{item.link.title}}</a>
           </template>
 
+          <p>{{item["quick start"].description}}</p>
 
+          <hr>
         </template>
       </template>
     </dom-module>
