componentizing the web one custom element at a time.

--- a/h5tk_components/h5tk-elements.html
+++ b/h5tk_components/h5tk-elements.html
@@ -3,3 +3,4 @@
 <link rel="import" href="../bower_components/firebase-element/firebase.html">
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="h5tk-app/h5tk-app.html">
+<link rel="import" href="h5tk-item/h5tk-item.html">
