--- a/h5tk_components/h5tk-app/h5tk-app.html
+++ b/h5tk_components/h5tk-app/h5tk-app.html
@@ -12,7 +12,7 @@
 
     <h3>My Firebase Data:</h3>
     <template is="dom-repeat" items="{{data}}">
-      <h5tk-item data="{{item}}"></h5tk>
+      <h5tk-item data="{{data[0]}}"></h5tk>
     </template>
   </template>
 </dom-module>
@@ -24,21 +24,23 @@
     properties: {
       data:{ 
       	type: Array,
+        notify: true,
         observer: "dataChanged"
       },
       handleResponse:{
       	type:Object,
+        //notify: true,
       	value:"handleResponse"
       }
     },
     ready: function(){ 
         console.log("h5tk-app ready"); 
-        this.data = "hi test";
+        this.data = [{"title":"hi test1"}, {"title": "hi test2"}];
        // this.innerHTML = "<h1>Hello 0.8</h1>";
     },
     handleResponse:function(data){ 
           console.log("handleResponse.");
-          console.log(data.detail);
+          console.log(data.detail[0]);
           this.data = data.detail;
       },
 	  dataChanged:function(data){ 
