dom-repeat referring to {{item}} doesn't seem to work.

--- a/h5tk_components/h5tk-app/h5tk-app.html
+++ b/h5tk_components/h5tk-app/h5tk-app.html
@@ -12,7 +12,7 @@
 
     <h3>My Firebase Data:</h3>
     <template is="dom-repeat" items="{{data}}">
-      <h5tk-item data="{{data[0]}}"></h5tk>
+      <h5tk-item data="{{item}}"></h5tk>
     </template>
   </template>
 </dom-module>
