upgraded to 0.9-rc.1 and now dom-repeat works

--- a/h5tk_components/h5tk-elements.html
+++ b/h5tk_components/h5tk-elements.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/paper-styles/paper-styles.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/firebase-element/firebase-element.html">
 <link rel="import" href="../bower_components/firebase-element/firebase.html">
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
