--- a/h5tk_components/h5tk-app/h5tk-app.html
+++ b/h5tk_components/h5tk-app/h5tk-app.html
@@ -1,18 +1,19 @@
 <link rel="import" href="../h5tk-elements.html">
 <dom-module id="h5tk-app">
   <link href="h5tk-app.css"></link>
-  <template is="">
+  <template>
     <iron-ajax
     	id="firebase"
       auto
       url="https://html5-toolkit.firebaseio.com/toolkit-items.json"
       handleas="json"
-      on-response="handleResponse"
+      last-response="{{data}}"
       verbose="true"></iron-ajax>
-
+<button on-click="restart">Refresh</button>
     <h3>My Firebase Data:</h3>
     <template is="dom-repeat" items="{{data}}">
-      <h5tk-item data="{{item}}"></h5tk>
+      <span class="counter"><span>{{counter(index)}}</span>.</span>
+      <h5tk-item data="{{item}}"></h5tk-item>
     </template>
   </template>
 </dom-module>
@@ -21,6 +22,9 @@
 
   Polymer({
     is: 'h5tk-app',
+    hostAttributes: {
+        class: "layout vertical fit"
+    },
     properties: {
       data:{ 
       	type: Array,
@@ -35,17 +39,25 @@
     },
     ready: function(){ 
         console.log("h5tk-app ready"); 
-        this.data = [{"title":"hi test1"}, {"title": "hi test2"}];
+       // this.data = [{"title":"hi test1"}, {"title": "hi test2"}];
        // this.innerHTML = "<h1>Hello 0.8</h1>";
     },
     handleResponse:function(data){ 
           console.log("handleResponse.");
           console.log(data.detail[0]);
           this.data = data.detail;
-      },
+    },
 	  dataChanged:function(data){ 
 	        console.log("dataChanged.");
 	         console.log(this.data);
-	    }
+           this.data = data;
+	  },
+    counter: function(idx) {
+       return idx + 1;
+     },
+    restart: function() {
+        console.log("firebase restart", this.data);
+        this.$.firebase.generateRequest();
+     },
   });
 </script>
