bring on some angular

--- a/h5tk_components/h5tk-elements.html
+++ b/h5tk_components/h5tk-elements.html
@@ -4,6 +4,6 @@
 <link rel="import" href="../bower_components/firebase-element/firebase-element.html">
 <link rel="import" href="../bower_components/firebase-element/firebase.html">
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="h5tk-app/h5tk-demo.html">
+<link rel="import" href="h5tk-demo/h5tk-demo.html">
 <link rel="import" href="h5tk-item/h5tk-item.html">
 <link rel="import" href="h5tk-app/h5tk-app.html">
