--- a/h5tk_components/h5tk-app/h5tk-app-paul.html
+++ b/h5tk_components/h5tk-app/h5tk-app-paul.html
@@ -20,7 +20,7 @@
             <a href="{{item.link.url}}">{{item.link.title}}</a>
           </template>
 
-          <p>{{item["quick start"].description}}</p>
+          <p>{{item.quick-start.description}}</p>
 
           <hr>
         </template>
@@ -57,7 +57,7 @@
                   },
                   "title" : "Demo Font"
                 } ],
-                "quick start" : {
+                "quick-start" : {
                   "code snippet" : "<html>   <head>     <link rel=\"stylesheet\" type=\"text/css\" href=\"http://fonts.googleapis.com/css?family=Tangerine\">     <style>       body {         font-family: 'Tangerine', serif;         font-size: 48px;       }     </style>   </head>   <body>     <div>Making the Web Beautiful!</div>   </body> </html>",
                   "description" : "Here's how you print hello world.",
                   "link" : {
@@ -77,7 +77,7 @@
                   },
                   "title" : "Demo Images"
                 } ],
-                "quick start" : {
+                "quick-start" : {
                   "code snippet" : "<html>   <head>     <link rel=\"stylesheet\" type=\"text/css\" href=\"http://fonts.googleapis.com/css?family=Tangerine\">     <style>       body {         font-family: 'Tangerine', serif;         font-size: 48px;       }     </style>   </head>   <body>     <div>Making the Web Beautiful!</div>   </body> </html>",
                   "description" : "Here's how you print hello world.",
                   "link" : {
