--- a/app/welcome/_welcome.html
+++ b/app/welcome/_welcome.html
@@ -6,7 +6,7 @@
 			</a>
 		</h1>
 
-		<md-list class="tags"
+		<md-list class="tags" 
 						 layout-sm="column" layout-align-sm="start start"
 						 layout="row" layout-align="start center">
 
@@ -25,7 +25,7 @@
 		</header>
 
 		<main>
-			<p class="md-body-1" ng-bind-html="welcome.safeHtml(item.description)"></p>
+			<p class="md-body-1" ng-bind-html="item.description"></p>
 		</main>
 	</section> <!-- description -->
 
@@ -39,7 +39,7 @@
 		<main>
 			<md-list>
 				<md-list-item ng-repeat="demo in item.demo">
-					<h4 class="md-subhead"
+					<h4 class="md-subhead" 
 							layout-sm="column" layout-align-sm="start start"
 							layout="row" layout-align="space-between center">
 
@@ -50,7 +50,7 @@
 						</md-button>
 					</h4>
 
-					<p class="md-body-1" ng-bind-html="welcome.safeHtml(demo.description)"></p>
+					<p class="md-body-1" ng-bind-html="demo.description"></p>
 				</md-list-item>
 			</md-list>
 		</main>
@@ -65,18 +65,18 @@
 
 		<main>
 			<md-list>
-				<md-list-item ng-repeat="quick in item['quick-start']"
+				<md-list-item ng-repeat="quick in item['quick-start']" 
 											layout="row" layout-align:"start start">
 					<h1 class="md-display-1 numeral">
 						{{ $index + 1 }}
 					</h1>
 
 					<div>
-						<p class="md-body-1" ng-bind-html="welcome.safeHtml(quick.description)"></p>
+						<p class="md-body-1" ng-bind-html="quick.description"></p>
 
 						<p>
-							<md-button href="{{ quick.link.url }}"
-												 target="_blank"
+							<md-button href="{{ quick.link.url }}" 
+												 target="_blank" 
 												 class="md-primary"
 												 md-no-ink>
 								{{ quick.link.title }}
@@ -104,7 +104,7 @@
 					</h1>
 
 					<div>
-						<p class="md-body-1" ng-bind-html="welcome.safeHtml(tip.description)"></p>
+						<p class="md-body-1" ng-bind-html="tip.description"></p>
 						<p class="md-body-1">{{ tip.type }}</p>
 					</div>
 				</md-list-item>
