--- a/ng-index.html
+++ b/ng-index.html
@@ -15,9 +15,10 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.4.0/angular-material-icons.min.js"></script>
 <script src="//code.angularjs.org/1.3.15/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-sanitize.min.js"></script>
-<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 
-<link rel="import" href="h5tk_components/h5tk-elements.html">
+<!-- <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+<link rel="import" href="h5tk_components/h5tk-elements.html"> -->
+
 <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.8.2/angular-material.min.css">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
 <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Source+Code+Pro:500'>
