--- a/app/welcome/_welcome.html
+++ b/app/welcome/_welcome.html
@@ -1,4 +1,10 @@
-<article ng-repeat="item in welcome.toolkitItems">
+<div class="progress-circle" ng-hide="home.progressComplete" 
+		 ng-if="main.progress">
+	<md-progress-circular md-mode="indeterminate"
+												class="md-accent"></md-progress-circular>
+</div>
+
+<article ng-if="!main.progress" ng-repeat="item in welcome.toolkitItems">
 	<header>
 		<h1 class="md-display-1">
 			<a href="#/h5tk/{{ item.title | hyphenate | lowercase }}">
@@ -7,15 +13,16 @@
 		</h1>
 
 		<md-list class="tags" layout="row" layout-align="start center">
+			<md-list-item class="md-body-1" ng-repeat="tag in item.tags" 
+										ng-if="item.tags">
 
-			<md-list-item class="md-body-1" ng-repeat="tag in item.tags">
 				<ng-md-icon icon="label" size="24" ng-if="$first"></ng-md-icon>
 				<span ng-if="!$first">{{ tag }}</span>
 			</md-list-item>
 		</md-list> <!-- tags -->
 	</header> <!-- title -->
 
-	<section class="summary">
+	<section class="summary" ng-if="item.description">
 		<header>
 			<h3 class="md-headline">
 				Summary
@@ -27,7 +34,7 @@
 		</main>
 	</section> <!-- description -->
 
-	<section class="demo">
+	<section class="demo block-color grey" ng-if="item.demo[0].title">
 		<header>
 			<h3 class="md-headline">
 				Demo
@@ -37,15 +44,12 @@
 		<main>
 			<md-list>
 				<md-list-item ng-repeat="demo in item.demo">
-					<h4 class="md-subhead" 
-							layout-sm="column" layout-align-sm="start start"
-							layout="row" layout-align="space-between center">
-
-						<span>{{ demo.title }}</span>
-
-						<md-button class="md-primary md-hue-1 md-raised">
-							{{ demo.link.title }}
-						</md-button>
+					<h4 class="md-subhead">
+							<a href="{{ demo.link.url }}" target="_blank"
+							 layout="row" layout-align="start start">
+							{{ demo.title }}
+							<ng-md-icon icon="open_in_new" size="20"></ng-md-icon>
+						</a>
 					</h4>
 
 					<p class="md-body-1" ng-bind-html="main.safeHtml(demo.description)"></p>
@@ -54,7 +58,7 @@
 		</main>
 	</section> <!-- demo -->
 
-	<section class="quick-start">
+	<section class="quick-start block-color primary-2">
 		<header>
 			<h3 class="md-headline">
 				Quick start
@@ -70,8 +74,6 @@
 					</h1>
 
 					<div>
-						<p class="md-body-1" ng-bind-html="main.safeHtml(quick.description)"></p>
-
 						<p>
 							<md-button href="{{ quick.link.url }}" 
 												 target="_blank" 
@@ -80,6 +82,8 @@
 								{{ quick.link.title }}
 							</md-button>
 						</p>
+
+						<p class="md-body-1" ng-bind-html="main.safeHtml(quick.description)"></p>
 					</div>
 				</md-list-item>
 			</md-list>
@@ -113,11 +117,11 @@
 		</header>
 
 		<main class="links md-body-1">
-			<md-list ng-repeat="link in item.links">
-				<md-list-item>
-					<md-button href="{{ link.url }}" target="_blank" md-no-ink>
+			<md-list>
+				<md-list-item ng-repeat="link in item.links">
+					<a href="{{ link.url }}" target="_blank">
 						{{ link.title }}
-					</md-button>
+					</a>
 				</md-list-item>
 			</md-list> <!-- links -->
 		</main>
