--- a/app/welcome/_welcome.html
+++ b/app/welcome/_welcome.html
@@ -120,8 +120,9 @@
 
 	<footer ng-if="item.links[0].title">
 		<header>
-			<h4 class="md-subhead">
+			<h4 class="md-subhead" layout="row" layout-align="start center">
 				Helpful links
+				<ng-md-icon icon="open_in_new" size="20"></ng-md-icon>
 			</h4>
 		</header>
 
