Michael reconfigure, style and structure to better fit into RMG iframe (i.e. RMG already uses a left side nav and top bar)

--- a/app/toolkit/_toolkit.html
+++ b/app/toolkit/_toolkit.html
@@ -1,5 +1,4 @@
-<div class="progress-circle" ng-hide="home.progressComplete" 
-		 ng-if="main.progress">
+<div class="progress-circle" ng-if="main.progress">
 	<md-progress-circular md-mode="indeterminate"
 												class="md-accent"></md-progress-circular>
 </div>
