--- a/app/welcome/_welcome.html
+++ b/app/welcome/_welcome.html
@@ -1,139 +1,11 @@
-<div class="progress-circle" ng-hide="home.progressComplete" 
-		 ng-if="main.progress">
+<div class="progress-circle" ng-if="main.progress">
+
 	<md-progress-circular md-mode="indeterminate"
 												class="md-accent"></md-progress-circular>
 </div>
 
-<article ng-if="!main.progress" ng-repeat="item in welcome.toolkitItems">
+<article ng-if="!main.progress" class="welcome md-body-1">
 	<header>
-		<h1 class="md-display-1">
-			<a href="#/h5tk/{{ item.title | hyphenate | lowercase }}">
-				{{ item.title }}
-			</a>
-		</h1>
-
-		<md-list class="tags" layout="row" layout-align="start center">
-			<md-list-item class="md-body-1" ng-repeat="tag in item.tags" 
-										ng-if="item.tags">
-
-				<ng-md-icon icon="label" size="24" ng-if="$first"></ng-md-icon>
-				<span ng-if="!$first">{{ tag }}</span>
-			</md-list-item>
-		</md-list> <!-- tags -->
-	</header> <!-- title -->
-
-	<section class="summary" ng-if="item.description">
-		<header>
-			<h3 class="md-headline">
-				Summary
-			</h3>
-		</header>
-
-		<main>
-			<p class="md-body-1" ng-bind-html="main.safeHtml(item.description)"></p>
-		</main>
-	</section> <!-- description -->
-
-	<section class="demo block-color grey" ng-if="item.demo[0].title">
-		<header>
-			<h3 class="md-headline">
-				Demo
-			</h3>
-		</header>
-
-		<main>
-			<md-list>
-				<md-list-item ng-repeat="demo in item.demo">
-					<h4 class="md-subhead">
-							<a href="{{ demo.link.url }}" target="_blank"
-							 layout="row" layout-align="start start">
-							{{ demo.title }}
-							<ng-md-icon icon="open_in_new" size="20"></ng-md-icon>
-						</a>
-					</h4>
-
-					<p class="md-body-1" ng-bind-html="main.safeHtml(demo.description)"></p>
-				</md-list-item>
-			</md-list>
-		</main>
-	</section> <!-- demo -->
-
-	<section class="quick-start block-color primary-2"
-					 ng-if="item['quick-start'][0].description">
-		<header>
-			<h3 class="md-headline">
-				Quick start
-			</h3>
-		</header>
-
-		<main>
-			<md-list>
-				<md-list-item ng-repeat="quick in item['quick-start']" 
-											layout="row" layout-align:"start start">
-					<h1 class="md-display-1 numeral">
-						{{ $index + 1 }}
-					</h1>
-
-					<div>
-						<p>
-							<md-button href="{{ quick.link.url }}" 
-												 target="_blank" 
-												 class="md-primary"
-												 layout="row" layout-align="start center"
-												 md-no-ink>
-								{{ quick.link.title }}
-								<ng-md-icon icon="open_in_new" size="20"></ng-md-icon>
-							</md-button>
-						</p>
-
-						<p class="md-body-1" ng-bind-html="main.safeHtml(quick.description)"></p>
-					</div>
-				</md-list-item>
-			</md-list>
-		</main>
-	</section> <!-- quick start -->
-
-	<section class="pro-tips" ng-if="item['pro-tips'][0].description">
-		<header>
-			<h3 class="md-headline">
-				Pro tips
-			</h3>
-		</header>
-
-		<main>
-			<md-list>
-				<md-list-item ng-repeat="tip in item['pro-tips']">
-					<div class="block" 
-							 ng-class="{good: tip.type == 'good', bad: tip.type == 'bad'}"
-							 layout-sm="column" layout-align-sm="center center"
-							 layout="row" layout-align="start center">
-						<span>
-							<ng-md-icon icon="check" size="24" ng-if="tip.type == 'good'"></ng-md-icon>
-							<ng-md-icon icon="close" size="24" ng-if="tip.type == 'bad'"></ng-md-icon>
-						</span> 
-						<p class="md-body-1" ng-bind-html="main.safeHtml(tip.description)"></p>
-					</div>
-				</md-list-item>
-			</md-list>
-		</main>
-	</section> <!-- pro tips -->
-
-	<footer ng-if="item.links[0].title">
-		<header>
-			<h4 class="md-subhead" layout="row" layout-align="start center">
-				Helpful links
-				<ng-md-icon icon="open_in_new" size="20"></ng-md-icon>
-			</h4>
-		</header>
-
-		<main class="links md-body-1">
-			<md-list>
-				<md-list-item ng-repeat="link in item.links">
-					<a href="{{ link.url }}" target="_blank">
-						{{ link.title }}
-					</a>
-				</md-list-item>
-			</md-list> <!-- links -->
-		</main>
-	</footer>
+		<h1 class="md-display-1">Welcome</h1>
+	</header>
 </article>
