--- a/ng-index.html
+++ b/ng-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app" ng-controller="MainCtrl as main">
+<html ng-app="app">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,47 +16,61 @@
 <script src="//code.angularjs.org/1.3.15/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-sanitize.min.js"></script>
 
-<!-- <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-<link rel="import" href="h5tk_components/h5tk-elements.html"> -->
-
 <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.8.2/angular-material.min.css">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
 <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Source+Code+Pro:500'>
 <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body  ng-controller="MainCtrl as main">
 
-<div class="container" layout="row" layout-align="space-between start">
-  <div class="left-side">
-    <md-sidenav md-component-id="navPanel" 
-                md-is-locked-open="main.size == 'lg'">
+<div class="container" layout="row" 
+     layout-align="space-between start">
+
+  <div class="left-side" ng-class="{lockNav:main.size == 'lg'}">
+    <header class="top-bar">
+      <div class="inner-content" layout="row" layout-align="space-between center">
+        <h3 class="md-subhead" ng-bind-html="main.safeHtml(main.pageTitle)"></h3>
+
+        <md-button ng-click="main.toggleRightNav()" 
+                   aria-label="Toggle Right Nav">
+          <ng-md-icon icon="menu" style="fill: #333" size="24"></ng-md-icon>
+        </md-button>
+      </div>
+    </header>
+
+    <md-content ng-view></md-content>
+  </div>
+
+  <div class="right-side">
+    <md-sidenav class="md-sidenav-right" md-component-id="RightNavPanel">
       <header class="md-title" layout="row" layout-align="start center">
-        <a href="#/htk5/welcome" ng-click="main.closeNav()">HTML5 Toolkit</a>
+        <span ng-click="main.closeRightNav()">
+          HTML5 Toolkit
+        </span>
       </header>
 
       <md-list>
-        <md-list-item ng-repeat="item in main.toolkitItems">
-          <a href="#/h5tk/{{item.title | lowercase | hyphenate}}" 
+        <md-list-item>
+          <a href="#/html5/welcome" 
              class="md-body-2"
-             ng-click="main.closeNav()">
+             ng-click="main.closeRightNav()"
+             ng-class="{active:main.activeNav('welcome')}">
+            
+            Welcome
+          </a>
+        </md-list-item>
+
+        <md-list-item ng-repeat="item in main.toolkitItems">
+          <a href="#/html5/toolkit/{{ item.title | lowercase | hyphenate }}" 
+             class="md-body-2"
+             ng-click="main.closeRightNav()"
+             ng-class="{active:main.activeNav('{{ item.title | lowercase | hyphenate }}')}">
+
             {{ item.title }}
           </a>
         </md-list-item>
       </md-list>
     </md-sidenav>
-  </div>
-
-  <div class="right-side" ng-class="{lockNav:main.size == 'lg'}">
-    <md-toolbar layout="row" layout-align="start center">
-      <md-button ng-click="main.toggleNav()" 
-                 ng-show="main.size != 'lg'" aria-label="Toggle Nav">
-        <ng-md-icon icon="menu" style="fill: #fff" size="24"></ng-md-icon>
-      </md-button>
-
-      <h3 class="md-subhead">{{ main.pageTitle }}</h3>
-    </md-toolbar>
-
-    <md-content ng-view></md-content>
   </div>
 </div>
 
